[Web Payments] Fix back arrow button on Payment Handler sheet

Bug: 816990
Change-Id: I4b7aaff3468e94e6eba52c09265d02e6d515594a
Reviewed-on: https://chromium-review.googlesource.com/939871
Reviewed-by: Rouslan Solomakhin <rouslan@chromium.org>
Commit-Queue: anthonyvd <anthonyvd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539543}
Former-commit-id: 76d547a3d1e13c270adf3f6fd7566d910585d763